# bw-agent

./: .gitignore  AGENTS.md  Cargo.toml  PLAN_AUDIT_2026-04-17.md  PLAN_AUDIT_2026-04-17_SECOND_ROUND.md  SECURITY_AUDIT.md  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json
.github/actions/prepare-build/: action.yml
.github/actions/prepare-pnpm/: action.yml
.github/scripts/: rename-artifacts.mjs  sync-version.mjs
.github/workflows/: ci.yml  release.yml
crates/bw-agent/: Cargo.toml
crates/bw-agent/src/: access_log.rs  approval.rs  auth.rs  config.rs  git_context.rs  git_sign.rs  lib.rs  main.rs  pipe.rs  process.rs  routing.rs  session_store.rs  ssh_agent.rs  state.rs
crates/bw-core/: Cargo.toml
crates/bw-core/src/: api.rs  cipherstring.rs  db.rs  error.rs  fingerprint.rs  identity.rs  json.rs  lib.rs  locked.rs
crates/bw-ui/: Cargo.toml
crates/bw-ui/examples/: test_dialog.rs
crates/bw-ui/src/: lib.rs
docs/: RELEASE.md  product-roadmap.md  ssh-key-routing-spec.md
docs/superpowers/plans/: 2025-04-16-process-chain.md  2026-04-14-bw-ssh-agent.md  2026-04-14-bw-ssh-agent.zh_CN.md  2026-04-18-deferred-email-setup.md  2026-04-18-ssh-key-routing.md  2026-04-20-git-ssh-signing.md
docs/superpowers/specs/: 2026-04-18-deferred-email-setup-design.md  2026-04-20-git-ssh-signing-design.md  2026-04-22-logo-design.md  2026-05-05-approval-sessions-design.md
e2e-tests/: package.json  pnpm-lock.yaml  wdio.conf.js
e2e-tests/lib/: credential-prompt.ps1  credentials.js  recorder.js
e2e-tests/test/specs/: login-flow.e2e.js  login.e2e.js  visual.e2e.js
scripts/: stage-sidecar.mjs  test-git-sign-cli.ps1
src/: App.tsx  app.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  events.rs  main.rs  system_events.rs  tray.rs
src/components/: ApprovalDialog.tsx  KeyEditModal.tsx  KeyTable.tsx  LogTable.tsx  PasswordInput.tsx  TotpInput.tsx
src/lib/: store.ts  tauri.ts
src/pages/: DashboardPage.tsx  LoginPage.tsx  SettingsPage.tsx
