[workspace]
resolver = "2"
members = [
    "crates/bw-core",
    "crates/bw-agent",
    "src-tauri",
]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"

[workspace.lints.clippy]
# Keep default clippy level (correctness + suspicious + style + complexity + perf).
# Opt-in to stricter pedantic incrementally rather than gating CI on it.
pedantic = { level = "allow", priority = -1 }
# Already allowed even when pedantic is enabled, retained for when pedantic is
# re-enabled during future clippy hardening work.
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
# Style/complexity lints deferred out of the current task1 scope; tracked for
# future cleanup.
too_many_arguments = "allow"
large_enum_variant = "allow"
