[package]
name = "bw-agent-desktop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
bw-core = { path = "../crates/bw-core" }
bw-agent = { path = "../crates/bw-agent" }
ssh-agent-lib = "0.5.2"
anyhow = "1.0"
tauri = { version = "2.10", features = ["tray-icon"] }
tauri-plugin-notification = "2.3"
tokio = { version = "1.51", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[lints]
workspace = true
