[package]
name = "bw-agent-desktop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
bw-core = { path = "../crates/bw-core" }
bw-agent = { path = "../crates/bw-agent" }
ssh-agent-lib = "0.5.2"
anyhow = "1.0"
tauri = { version = "2.10", features = ["tray-icon"] }
tauri-plugin-notification = "2.3"
tokio = { version = "1.51", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
rsa = { version = "0.9", features = ["pem"] }
sha1 = "0.10"
pem = "3.0"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_SystemInformation",
    "Win32_System_RemoteDesktop",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
block2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = [
    "NSNotification",
    "NSString",
    "NSOperation",
    "NSDistributedNotificationCenter",
] }

[lints]
workspace = true
