[package]
name = "bw-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aes = "0.9.0"
argon2 = "0.5.3"
arrayvec = "0.7.6"
base64 = "0.22.1"
block-padding = "0.4.2"
cbc = { version = "0.2.0", features = ["alloc"] }
hkdf = "0.13.0"
hmac = "0.13.0"
pbkdf2 = "0.12.2"
percent-encoding = "2.3.2"
pkcs8 = "0.10.2"
rand = "0.10.1"
region = "3.0.2"
reqwest = { version = "0.13.2", features = ["json"] }
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_repr = "0.1.20"
sha1 = "0.11.0"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.51", features = ["fs", "io-util"] }
url = "2.5.8"
uuid = { version = "1.23", features = ["v4"] }
zeroize = "1.8.2"
log = "0.4.29"

[lints]
workspace = true
